# news_classification

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  eda.html  eda.ipynb  pyproject.toml  run_inference.sh  run_pipeline.sh
news_classification/: live_inference.py  main.py  pipeline.py
news_classification/components/: __init__.py  batch_inference.py  data.py  training.py
news_classification/config/: class_corrections.py  pipeline_config.py  pipeline_config.yml
news_classification/data_handling/: custom_dataset.py  preprocessing.py  read_data.py
news_classification/data_handling/feature_extractors/: __init__.py  base.py  embeddings.py  tf_idf.py  word_cound.py
news_classification/modelling/: evaluation.py  oversample.py
news_classification/modelling/classifiers/: __init__.py  _custom_mlp.py  base.py  boosting.py  custom_mlp.py  logistic_regression.py  sk_mlp.py
news_classification/pipeline_components/: __init__.py  batch_inference.py  data.py  training.py
news_classification/utils/: constants.py  data_types.py  paths.py  utils.py
storage/model_registry/BoostingClassifier/: report.xlsx
storage/model_registry/CustomMLPClassifier/: report.xlsx
storage/model_registry/LogisticRegressionClassifier/: LogisticRegressionClassifier.classifier  report.xlsx
tests/: conftest.py  test_read_news_artice_data.py
tests/testing_data/: news.json
